--- a/about.html
+++ b/about.html
@@ -44,16 +44,13 @@
 	        </ul>
 		    </div>
 		  </div>	
-			<h3>Останні новини</h3>
+			<h3><a href = "news.html">Останні новини</a></h3>
 			<div class="right_back">	
 		    <div class="right_bottom">
 			<ul>
 			  <li>
-				  <h4>June 2, 2008</h4>
-				  <p><a href="#"> Duis tempor posuere diam. Suspendisse vel tellus quis nunc malesuada porta. &#8230;</a></p></li>
-				   <li>
-				  <h4>June 12, 2008</h4>
-				  <p><a href="#">Tempus Duis tempor posuere diam. Suspendisse vel tellus quis nunc malesuada porta. &#8230;</a></p></li>
+				  <h4>8 серпня, 2018</h4>
+				  <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
 				  </ul>
 		  </div>
 		  </div>
