--- a/cont.html
+++ b/cont.html
@@ -124,7 +124,7 @@ document.querySelector('#calendar thead tr:nth-child(1) td:nth-child(3)').onclic
 	<div id="left">		
 		    <div class="left_top">
 				  <div class="left_bottom">
-			<h1> </h1> <p><strong>АДРЕСА: </strong> 87421, Донецька область, Мангуський район,  </p> <p> с. Дем'янівка, вул. Шкільна, 11</p>
+			<h1> </h1> <p><strong>АДРЕСА: </strong> 87421, Донецька область, Мангушський район,  </p> <p> с. Дем'янівка, вул. Шкільна, 11</p>
 			<h1> </h1> <p><strong>ТЕЛЕФОН: </strong> (06297)32-5-40 </p> 
 	
 <p><strong>ЕЛЕКТРОННА ПОШТА:</strong> damian3240@gmail.com</p>
