--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 			<h3><a href="receipts.html" title="">Нові надходження</a></h3>
 			<div class="right_back">	
 		    <div class="right_bottom">
-			<ul>	<li class="sub"><a href="receipts.html#dara" alt = "Дара Корній Чарівні істоти українського міфу. Духи природи">Дара Корній "Чарівні істоти...</a></li>
-					<li class="sub"><a href="receipts.html#galaii">Володимир Галайчук "Укра...</a></li>
-					<li class="sub"><a href="receipts.html#pagu">Галина  Пагутяк  "Слуга з До...</a></li>
+			<ul>		<li class="sub"><a href="receipts.html">Дара Корній "Чарівні істоти...</a></li>
+					<li class="sub"><a href="receipts.html">Володимир Галайчук "Укра...</a></li>
+					<li class="sub"><a href="receipts.html">Галина  Пагутяк  "Слуга з До...</a></li>
 								
 	        </ul>
 		    </div>
@@ -47,9 +47,11 @@
 			<div class="right_back">	
 		    <div class="right_bottom">
 			<ul>
-			  <li>
+			  <li> <h4>24 серпня, 2018</h4>
+				  <p><a href="news.html"> День Незалежності України &#8230;</a></p>
+				  <p>&nbsp;</p>
 				  <h4>8 серпня, 2018</h4>
-				   <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
+				  <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
 				   
 				  </ul>
 		  </div>
