--- a/receipts.html
+++ b/receipts.html
@@ -38,9 +38,9 @@
 			<div class="right_back">	
 		    <div class="right_bottom">
 			<ul>
-					<li class="sub"><a href="receipts.html#dara" alt = "Дара Корній Чарівні істоти українського міфу. Духи природи">Дара Корній "Чарівні істоти...</a></li>
-					<li class="sub"><a href="receipts.html#galaii">Володимир Галайчук "Укра...</a></li>
-					<li class="sub"><a href="receipts.html#pagu">Галина  Пагутяк  "Слуга з До...</a></li>
+					<li class="sub"><a href="receipts.html">Дара Корній "Чарівні істоти...</a></li>
+					<li class="sub"><a href="receipts.html">Володимир Галайчук "Укра...</a></li>
+					<li class="sub"><a href="receipts.html">Галина  Пагутяк  "Слуга з До...</a></li>
 							
 	        </ul>
 		    </div>
@@ -49,9 +49,11 @@
 			<div class="right_back">	
 		    <div class="right_bottom">
 			<ul>
-			 <li>
+			 <li> <h4>24 серпня, 2018</h4>
+				  <p><a href="news.html"> День Незалежності України &#8230;</a></p>
+				  <p>&nbsp;</p>
 				  <h4>8 серпня, 2018</h4>
-			  <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
+				  <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
 				  </ul>
 		  </div>
 		  </div>
@@ -124,7 +126,7 @@ document.querySelector('#calendar thead tr:nth-child(1) td:nth-child(3)').onclic
 	<div id="left">		
 				<div class="left_top">
 				  <div class="left_bottom">
-	<h4><a name="dara">Дара Корній "Чарівні істоти українського міфу. Духи природи"</a></h4>
+	<h4>Дара Корній "Чарівні істоти українського міфу. Духи природи"</h4>
 		 <a  href="images/darakorny.jpg" target="_blank">
 		 <img class="theleft" src="images/darakorny.jpg" width="200"/> </a>
 	<p align="justify">Ця книжка — чарівна. Ви не просто погортаєте її сторінки — ви поблукаєте стежками правічного лісу, почуєте його дихання, 
@@ -143,7 +145,7 @@ document.querySelector('#calendar thead tr:nth-child(1) td:nth-child(3)').onclic
 			
 			<div class="left_top">
 				  <div class="left_bottom">
-	<h4><a name="galaii">Володимир Галайчук "Українська міфологія"</a></h4>
+	<h4>Володимир Галайчук "Українська міфологія"</h4>
 	<a  href="images/galaii.jpg" target="_blank">
 	<img class ="rightshow" src="images/galaii.jpg" width="200" /></a>
 	<p align="justify">На сторінках цієї книжки постають легенди про потерчат і мавок, чортів і русалок
@@ -164,7 +166,7 @@ document.querySelector('#calendar thead tr:nth-child(1) td:nth-child(3)').onclic
 				</div>
 		<div class="left_top">
 				  <div class="left_bottom">
-	<h4><a name="pagu">Галина Пагутяк "Слуга з Добромиля"</a></h4>
+	<h4>Галина Пагутяк "Слуга з Добромиля"</h4>
 	<a  href="images/pagu.gif" target="_blank">
 	<img class ="theleft" src="images/pagu.gif" width="200" /></a>
 	<p align="justify">В окрузі старовинного галицького містечка Добромиль в часи середньовіччя у вдови, яку вважають відьмою, 
