--- a/int-rec.html
+++ b/int-rec.html
@@ -37,9 +37,9 @@
 			<div class="right_back">	
 		    <div class="right_bottom">
 			<ul>
-						<li class="sub"><a href="receipts.html#dara" alt = "Дара Корній Чарівні істоти українського міфу. Духи природи">Дара Корній "Чарівні істоти...</a></li>
-					<li class="sub"><a href="receipts.html#galaii">Володимир Галайчук "Укра...</a></li>
-					<li class="sub"><a href="receipts.html#pagu">Галина  Пагутяк  "Слуга з До...</a></li>
+						<li class="sub"><a href="receipts.html">Дара Корній "Чарівні істоти...</a></li>
+					<li class="sub"><a href="receipts.html">Володимир Галайчук "Укра...</a></li>
+					<li class="sub"><a href="receipts.html">Галина  Пагутяк  "Слуга з До...</a></li>
 									
 	        </ul>
 		    </div>
@@ -48,9 +48,11 @@
 			<div class="right_back">	
 		    <div class="right_bottom">
 			<ul>
-			<li>
-			  <h4>8 серпня, 2018</h4>
-			  <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
+			 <li> <h4>24 серпня, 2018</h4>
+				  <p><a href="news.html"> День Незалежності України &#8230;</a></p>
+				  <p>&nbsp;</p>
+				  <h4>8 серпня, 2018</h4>
+				  <p><a href="news.html">110 років від дня народження Якова Васильовича Баша &#8230;</a></p></li>
 				  </ul>
 		  </div>
 		  </div>
