--- a/news.html
+++ b/news.html
@@ -24,7 +24,7 @@
   </div>
 	<div id="logo">
 		<h1><a>Дем'янівська загальноосвітня школа І-ІІІ ступенів. Бібліотека</a></h1>
-		<h2><a>Нові надходження</a></h2>
+		<h2><a>Новини</a></h2>
 	</div>
   
 </div>
