--- a/int-rec.html
+++ b/int-rec.html
@@ -142,7 +142,8 @@ document.querySelector('#calendar thead tr:nth-child(1) td:nth-child(3)').onclic
 			<p><a href="https://1drv.ms/p/s!AsaokhDiZ5XRgRrsuE9LyRGd_FAk" target="_blank">Дитинство геніальних особистостей у розповідях сучасних українських письменників</a></p>    
 			<p><a href="https://1drv.ms/p/s!AsaokhDiZ5XRgRvD2dQfQz-buEjr" target="_blank">Дитяча література – нові імена</a></p>  
 	        <p><a href="https://drive.google.com/file/d/0B0njcJ2tFB2bRlkybmxJaXhiQVU/view" target="_blank">Буктрейлер. Л.Глібов</a></p>   			
-	
+	       <p><a href="https://drive.google.com/file/d/1lBqVMwccJpqBbgkXUItrnV-kulCQ3l7y/view" target="_blank">Буктрейлер до 120-річчя від дня народження В.М. Сосюри</a></p>   	
+			<p><a href="https://drive.google.com/file/d/1JR2w57qqNwNMQfNXqg9dEJKbeTfcwL3N/view" target="_blank">Віртуальна виставка до 100-річчя від дня народження  В.О. Сухомлинського</a></p>   			
 			</div>
 				</div>
 			
