--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ document.querySelector('#calendar thead tr:nth-child(1) td:nth-child(3)').onclic
 			<div class="left_top">
 				  <div class="left_bottom">
 			<h4>Буктрейлер на вірш Володимира Сосюри "Любіть Україну”</h4>
-          <iframe width="480" height="320" src="https://www.youtube.com/embed/baXn9SZwDNs&feature=youtu.be" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>		  
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/baXn9SZwDNs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
 		 <div class="date">
 		 <img src="images/timeicon.gif" alt="" /> 9 жовтня 2018</p>				
 				</div>
